--- a/index.html
+++ b/index.html
@@ -3624,47 +3624,59 @@ window.addEventListener('hashchange', activateFromHash);
    ======================= */
 (function () {
   // Helper: load script sekali sahaja (global)
-  window.loadScriptOnce = window.loadScriptOnce || (function () {
-    const loaded = new Set();
-    return function loadScriptOnce(url) {
-      return new Promise((resolve, reject) => {
-        if (loaded.has(url)) return resolve();
-        const s = document.createElement('script');
-        s.src = url;
-        s.async = true;
-        s.onload = () => { loaded.add(url); resolve(); };
-        s.onerror = () => reject(new Error('Gagal muat: ' + url));
-        document.head.appendChild(s);
-      });
-    };
-  })();
-
-  // OVERRIDE: pastikan hanya cuba CDN (tiada lagi 'vendor/...').
-  window.ensureXLSXReady = async function ensureXLSXReady() {
-    if (window.XLSX) return;
-    const cdns = [
-      'https://cdn.jsdelivr.net/npm/xlsx@0.19.3/dist/xlsx.full.min.js',
-      'https://unpkg.com/xlsx@0.19.3/dist/xlsx.full.min.js',
-      'https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.19.3/xlsx.full.min.js'
-    ];
-    let lastErr;
-    for (const url of cdns) {
-      try {
-        await window.loadScriptOnce(url);
-        if (window.XLSX) {
-          console.log('[XLSX] Loaded from', url);
-          return;
-        }
-      } catch (e) { lastErr = e; }
-    }
-    console.error('[XLSX] Gagal dimuat dari semua CDN.');
-    throw new Error('Tidak dapat memuatkan SheetJS (XLSX).');
-document.addEventListener('DOMContentLoaded', function(){
-    const btnMonitor = document.getElementById('btnMonitorAll');
-    if (btnMonitor) {
-      btnMonitor.addEventListener('click', ()=> showMonitorAll());
-    }
+  <!-- ==== BAHAGIAN BAWAH: helper + XLSX loader + event listener ==== -->
+// Helper: muatkan skrip satu kali sahaja
+window.loadScriptOnce = window.loadScriptOnce || function loadScriptOnce(src){
+  return new Promise((resolve, reject) => {
+    // jika sudah dimuat
+    if (document.querySelector('script[data-dynamic-src="'+src+'"]')) return resolve();
+    const s = document.createElement('script');
+    s.src = src;
+    s.async = true;
+    s.setAttribute('data-dynamic-src', src);
+    s.onload = () => resolve();
+    s.onerror = () => reject(new Error('Gagal memuat: '+src));
+    document.head.appendChild(s);
   });
+};
+
+// OVERRIDE: pastikan hanya cuba CDN (tiada lagi 'vendor/...').
+window.ensureXLSXReady = async function ensureXLSXReady() {
+  if (window.XLSX) return;
+  const cdns = [
+    'https://cdn.jsdelivr.net/npm/xlsx@0.19.3/dist/xlsx.full.min.js',
+    'https://unpkg.com/xlsx@0.19.3/dist/xlsx.full.min.js',
+    'https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.19.3/xlsx.full.min.js'
+  ];
+  let lastErr;
+  for (const url of cdns) {
+    try {
+      await window.loadScriptOnce(url);
+      if (window.XLSX) {
+        console.log('[XLSX] Loaded from', url);
+        return;
+      }
+    } catch (e) { lastErr = e; }
+  }
+  console.error('[XLSX] Gagal dimuat dari semua CDN.', lastErr);
+  throw new Error('Tidak dapat memuatkan SheetJS (XLSX).');
+};
+
+// Event listener untuk butang "Monitor Semua"
+document.addEventListener('DOMContentLoaded', function(){
+  const btnMonitor = document.getElementById('btnMonitorAll');
+  if (btnMonitor) {
+    btnMonitor.addEventListener('click', () => showMonitorAll());
+  }
+});
+
+// (Opsyen) Henti polling bila keluar dari paparan monitor
+window.addEventListener('hashchange', () => {
+  if (!location.hash.includes('#monitor')) {
+    try { window.stopMonitorPolling && window.stopMonitorPolling(); } catch(e){}
+  }
+});
 </script>
+
 </body>
 </html>
